<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="20dp" >


        <TextView

            android:id="@+id/textViewTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/may_i_ask_you_phone_number"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />



        <TextView

            android:id="@+id/textViewDescrip"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/may_i_ask_you_phone_number_may_i_ask_you_phone_numbervmay_i_ask_you_phone_number"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorBlack" />


        <LinearLayout

            android:id="@+id/EditTestNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="15dp">


            <Spinner

                android:id="@+id/spinnerCountries"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp" />

            <EditText

                android:id="@+id/editTextPhone"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_round"
                android:digits="0123456789"
                android:hint="@string/enter_your_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="10dp" />


        </LinearLayout>


    <Button
        android:id="@+id/buttonProceed"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:text="@string/continua"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

</LinearLayout>



</ScrollView>









